# APZ_labs

./: Dockerfile  docker-compose.yml  requests_example.http
bash_scripts/: add_kv.sh  service_deregistraton_by_id.sh  setup_consul.sh  stop_consul.sh
facade_service/: CMakeLists.txt  Dockerfile  main.cpp
facade_service/cmake_files/: FindLibCpr.cmake
facade_service/controller/: FacadeController.cpp  FacadeController.h
facade_service/domain/: Message.h
facade_service/service/: FacadeService.cpp  FacadeService.h
logging_service/: CMakeLists.txt  Dockerfile  main.cpp
logging_service/controller/: LoggingController.cpp  LoggingController.h
logging_service/domain/: Message.h
logging_service/service/: HazelcastLoggingService.cpp  HazelcastLoggingService.h  InMemoryLoggingService.cpp  InMemoryLoggingService.h  LoggingService.cpp  LoggingService.h
messages_service/: CMakeLists.txt  Dockerfile  main.cpp
messages_service/cmake_files/: FindLibHttpServer.cmake
messages_service/controller/: MessagesController.cpp  MessagesController.h
messages_service/repository/: MessagesRepository.cpp  MessagesRepository.h
messages_service/service/: MessagesService.cpp  MessagesService.h
task3/: CMakeLists.txt  main.cpp
task4/: CMakeLists.txt  main.cpp
task5/: CMakeLists.txt  bounded_queue.yml  main.cpp
